[package]
name = "checklists"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
build = "build.rs"

[[bin]]
name = "checklist_server"
path = "src/main.rs"

[[bin]]
name = "checklist_cli"
path = "src/cli.rs"

[[bin]]
name = "checklist_tui"
path = "src/tui.rs"

[dependencies]
getopts = "0.2"
askama = "0.6"
cursive = "0.8"
# cursive_table_view = "0.5.0"
rand = "0.4"

actix = "0.7"
actix-web = "0.7"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
askama = "0.6"


